--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,13 @@ plugins {
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
+apply plugin: 'war'
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = '17'
+
+war{
+	enabled=false
+}
 
 repositories {
 	mavenCentral()
@@ -14,6 +18,7 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
