--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'java'
 	id 'org.springframework.boot' version '3.0.2'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id "org.sonarqube" version "4.2.1.3168"
+
 }
 
 apply plugin: 'war'
@@ -16,6 +18,9 @@ repositories {
 	mavenCentral()
 }
 
+
+
+
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
@@ -25,3 +30,13 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+
+
+
+sonar {
+	properties {
+		property "sonar.projectKey", "jenkins_demo"
+		property "sonar.projectName", "jenkins_demo"
+	}
+}
+// ./gradlew sonar -D"sonar.projectKey=demo" -D "sonar.host.url=http://192.168.56.1:9000" -D "sonar.token=sqp_c04b98ce2538f41082e52851e67a20d4a2bfe841"
